fix right tab spacing

--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -92,7 +92,7 @@
 .menu-item {
   font-size: 14px;
   font-weight: 600;
-  padding: 12px;
+  padding: 12px !important;
 }
 
 .menu-item a:hover {
